[tool.poetry]
name = "vcomp"
version = "0.1.0"
description = "Atividade avaliativa de visão computacional"
authors = ["Daniel_Salvador <dvccs@softex.cin.ufpe.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tensorflow = "^2.18.0"
torch = {version = "^2.5.1+cu124", source = "pytorch-gpu"}
torchvision = {version = "^0.20.1+cu124", source = "pytorch-gpu"}
torchaudio = {version = "^2.5.1+cu124", source = "pytorch-gpu"}
keras = "^3.7.0"
segmentation-models-pytorch = "^0.3.4"
matplotlib = "^3.9.2"
opencv-python = "^4.10.0.84"
diffusers = "^0.31.0"
accelerate = "^1.1.1"
transformers = "^4.46.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"


[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
