[tool.poetry]
name = "vcomp"
version = "0.1.0"
description = "Projeto da disciplina de visão computacional da residência em robótica e IA do CIn"
authors = ["Daniel-Salvador <dvccs@softex.cin.ufpe.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
